[gd_scene load_steps=22 format=3 uid="uid://crqc8tf4jq1qh"]

[ext_resource type="Script" path="res://scenes/enemy/enemy.gd" id="1_e0ly1"]
[ext_resource type="PackedScene" uid="uid://bghn804k1k3i8" path="res://components/flippable/flippable_sprite_2d.tscn" id="2_dxaxl"]
[ext_resource type="Texture2D" uid="uid://dl5xntyojnam4" path="res://scenes/enemy/manananggal/centered_manannggal-Sheet.png" id="3_fuwo2"]
[ext_resource type="Texture2D" uid="uid://dr0kskl81ky0d" path="res://assets/img/enemy/Aswang/aswang_all_movementspng.png" id="3_w0o8y"]
[ext_resource type="PackedScene" uid="uid://cmwotsgmrkf85" path="res://scenes/state_machine/state_machine.tscn" id="4_25evh"]
[ext_resource type="Script" path="res://scenes/enemy/aswang/states/aswang_wandering.gd" id="5_601fq"]
[ext_resource type="Script" path="res://scenes/enemy/aswang/states/aswang_chasing.gd" id="6_wskt1"]
[ext_resource type="Script" path="res://scenes/enemy/aswang/states/aswang_attacking.gd" id="7_lsxj7"]
[ext_resource type="Script" path="res://scenes/enemy/aswang/states/aswang_hurting.gd" id="8_umtj3"]
[ext_resource type="PackedScene" uid="uid://de6rqhh7nx1o5" path="res://components/hitbox/hit_box_component.tscn" id="9_nlfxu"]
[ext_resource type="Script" path="res://components/flippable/flippable_shape_2d.gd" id="10_7niy1"]
[ext_resource type="Script" path="res://components/hitbox/detect_player.gd" id="11_jrcv6"]

[sub_resource type="Animation" id="Animation_4gowi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fuwo2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBoxComponent/FlippableShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FlippableSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rg1gx"]
resource_name = "attack"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fuwo2")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBoxComponent/FlippableShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_jg87r"]
resource_name = "die"

[sub_resource type="Animation" id="Animation_pbpbm"]
resource_name = "run"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_fuwo2")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4kjr2"]
resource_name = "test"
length = 0.500008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_w0o8y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pdwbq"]
_data = {
"RESET": SubResource("Animation_4gowi"),
"attack": SubResource("Animation_rg1gx"),
"die": SubResource("Animation_jg87r"),
"run": SubResource("Animation_pbpbm"),
"test": SubResource("Animation_4kjr2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkatm"]
size = Vector2(82.5, 11.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdh32"]
size = Vector2(6, 34.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cu5ks"]
size = Vector2(6, 34.5)

[node name="Manananggal" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_e0ly1")

[node name="FlippableSprite" parent="." instance=ExtResource("2_dxaxl")]
position = Vector2(1, -7)
texture = ExtResource("3_fuwo2")
hframes = 4
vframes = 3

[node name="RayCast2D" type="RayCast2D" parent="FlippableSprite"]
position = Vector2(0, 12)
rotation = -0.00336929
target_position = Vector2(125, 0.404)
collision_mask = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pdwbq")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
scale = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_gkatm")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("4_25evh")]
initial_state = NodePath("Wandering")

[node name="Wandering" type="Node" parent="StateMachine"]
script = ExtResource("5_601fq")

[node name="Chasing" type="Node" parent="StateMachine"]
script = ExtResource("6_wskt1")

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource("7_lsxj7")

[node name="Timer" type="Timer" parent="StateMachine/Attacking"]
wait_time = 0.5
one_shot = true

[node name="Hurting" type="Node" parent="StateMachine"]
script = ExtResource("8_umtj3")

[node name="Timer" type="Timer" parent="StateMachine/Hurting"]
wait_time = 0.5
one_shot = true

[node name="Nagluto" type="Node" parent="StateMachine"]

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("flippable_sprite") instance=ExtResource("9_nlfxu")]
light_mask = 2
collision_layer = 0
collision_mask = 2
flippable_sprite = NodePath("../FlippableSprite")

[node name="FlippableShape" type="CollisionShape2D" parent="HitBoxComponent"]
light_mask = 0
position = Vector2(23, -5.75)
shape = SubResource("RectangleShape2D_fdh32")
disabled = true
debug_color = Color(0.334819, 0.622371, 7.70092e-07, 0.42)
script = ExtResource("10_7niy1")
default_position = Vector2(23, -14)

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = -23.0
offset_top = -63.0
offset_right = 24.0
offset_bottom = -40.0
text = "STATE"

[node name="DetectPlayer" parent="." node_paths=PackedStringArray("flippable_sprite") instance=ExtResource("9_nlfxu")]
collision_layer = 0
collision_mask = 2
script = ExtResource("11_jrcv6")
flippable_sprite = NodePath("../FlippableSprite")

[node name="FlippableShape" type="CollisionShape2D" parent="DetectPlayer"]
light_mask = 0
position = Vector2(23, -5.75)
shape = SubResource("RectangleShape2D_cu5ks")
script = ExtResource("10_7niy1")
default_position = Vector2(23, -13)

[connection signal="is_damaged" from="." to="StateMachine/Wandering" method="_on_aswang_is_damaged"]
[connection signal="is_damaged" from="." to="StateMachine/Chasing" method="_on_aswang_is_damaged"]
[connection signal="is_damaged" from="." to="StateMachine/Attacking" method="_on_aswang_is_damaged"]
[connection signal="is_flipped" from="FlippableSprite" to="." method="_on_flippable_sprite_is_flipped"]
[connection signal="animation_changed" from="AnimationPlayer" to="StateMachine/Attacking" method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Attacking" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StateMachine/Attacking/Timer" to="StateMachine/Attacking" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Hurting/Timer" to="StateMachine/Hurting" method="_on_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="StateMachine/Chasing" method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectPlayer" to="StateMachine/Chasing" method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="StateMachine/Chasing" method="_on_detect_player_body_exited"]
